--- a/templates/colors.mustache
+++ b/templates/colors.mustache
@@ -1,5 +1,6 @@
 ## Base16 {{scheme-name}}
-# Author: {{scheme-author}}
+# Scheme author: {{scheme-author}}
+# Template author: Tinted Theming (https://github.com/tinted-theming)
 #
 # You can use these variables anywhere in the i3 configuration file.
 
